kubernetes/hass/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hass
  labels:
    app.kubernetes.io/name: hass
    app.kubernetes.io/part-of: hass
